--- a/app/src/main/res/layout/bio_input_dialog.xml
+++ b/app/src/main/res/layout/bio_input_dialog.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/custom_dialog_layout_design_user_input"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
     android:padding="16dp">
@@ -11,7 +11,7 @@
         android:id="@+id/dialogTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Caption for the Photo"
+        android:text="Bio for your Profile"
         android:textColor="@color/textTitle"
         android:textSize="@dimen/_16ssp"
         android:fontFamily="@font/sf_pro_rounded_medium"/>
@@ -20,7 +20,7 @@
         android:id="@+id/userInputDialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="enter a caption for the photo"
+        android:hint="Please fill in about yourself"
         android:textColor="@color/black"
         android:fontFamily="@font/sf_pro_rounded_regular"
         android:textColorHint="#B0ADAD"
